fix: flipping img & btn collapsing

--- a/pages/Games/CoinFlip.module.scss
+++ b/pages/Games/CoinFlip.module.scss
@@ -3,25 +3,27 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  img {
-    width: 100%;
-    margin-bottom: 15px;
+  .flipping-view {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 55vh;
+    margin-bottom: 5vh;
+    img {
+      width: 100%;
+      max-height: 100%;
+      max-width: 100%;
+      margin-bottom: 15px;
+    }
+    .result-text {
+      font-size: 20px;
+      font-weight: bold;
+      background-color: rgb(255, 182, 36, 0.7);
+      padding: 5px 17px;
+      border-radius: 5px;
+    }
   }
-  .result-text {
-    font-size: 20px;
-    font-weight: bold;
-    background-color: rgb(255, 182, 36, 0.7);
-    padding: 5px 17px;
-    border-radius: 5px;
-  }
-}
-
-.flipping-view {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 55vh;
-  margin-bottom: 5vh;
 }
 
 .flipping {
